# chromato

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: test.yml
chromato/: __init__.py  base_colors.py  classes.py  constants.py  convert.py  operations.py  parse.py  spaces.py  utils.py  validation.py
cmyko/: classes.py  cmyko.py  constants.py  convert.py  math.py  operations.py  parse.py  spaces.py  validation.py
tests/: helpers.py  test_classes.py  test_cmyko.py  test_convert.py  test_math.py  test_operations.py  test_parse.py  test_spaces.py  test_utils.py  test_validation.py
